ags (0.7.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove of effects because refactoring broke it
	* fixed remove of automation as removing effect because before it was left there
	* fixed remove automation as shrink audio channels or pads
	* fixed XPath and xmlNode names of turtles to lower-case
	* fixed XPath expressions in ags_lv2_plugin.c to access plugin correctly because it returned all plugins instead of one
	* implemented update automation editor on add/remove effect look at ags_automation_editor_reset_port(), it is new
	* implemented prefix of AgsNotebook now for automation line and notation channel
	* added mutices to ags_toolbar.c

ags (0.7.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed infinite loop in ags_automation_editor.c - line = line++
	* fixed restore of controls
	* fixed AgsNavigation set bpm
	* fixed missing length of AgsDrum and AgsMatrix
	* optimized XML file output

ags (0.7.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash in ags_recycling_create_audio_signal_with_frame_count() because premature end wasn't handled
	* fixed dead-lock caused by AgsNavigation callbacks
	* fixed missing AgsThreadPool for AgsLv2WorkerManager in ags_setup()
	* fixed unlock libinstpatch mutices in ags_ipatch.c because else ending in dead-lock
	* fixed looped AgsRecallDssiRun and AgsRecallLv2Run
	* improved AgsLadspaBrowser and AgsLv2Browser to not load default directory every time

ags (0.7.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed clip-board by merging values since automation ports can occur multiple times
	* fixed map width of automation editor
	* fixed clipped selection
	* fixed reset automation editor position
	* fixed ruler widget because the previous code obviously did wrong use of ceil()
	* fixed translate values in automation editor
	* fixed line member editor hide bulk